--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "main": "index.js",
   "author": "gleb.mihalkov",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "cross-env NODE_ENV=development webpack"
+  },
   "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "@babel/register": "^7.4.4",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
