--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,6 @@
     "target": "es5",
     "jsx": "react",
     "moduleResolution": "node",
-    "baseUrl": "./src",
-    "paths": {
-      "*": [ "./*" ],
-    }
+    "baseUrl": "src"
   }
 }
