--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "target": "es5",
     "jsx": "react",
     "moduleResolution": "node",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "resolveJsonModule": true
   }
 }
