--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "moment-locales-webpack-plugin": "^1.0.7",
+    "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.3",
     "webpack": "^4.35.3",
     "webpack-bundle-analyzer": "^3.3.2",
@@ -23,8 +25,12 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.136",
+    "@types/moment": "^2.13.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
