--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment-locales-webpack-plugin": "^1.0.7",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.3",
+    "typescript-plugin-styled-components": "^1.4.3",
     "webpack": "^4.35.3",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.5",
@@ -29,9 +30,17 @@
     "@types/moment": "^2.13.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
+    "@types/react-helmet": "^5.0.8",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-transition-group": "^4.2.0",
+    "@types/styled-components": "^4.1.18",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.0.1",
+    "react-transition-group": "^4.2.1",
+    "styled-components": "^4.3.2"
   }
 }
