--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "baseUrl": "src",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   }
 }
