--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server"
   },
   "devDependencies": {
-    "array-flatten": "^2.1.2",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-react-constant-elements": "^7.5.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-styled-components": "^1.10.6",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
     "moment-locales-webpack-plugin": "^1.0.7",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.3",
-    "typescript-plugin-styled-components": "^1.4.3",
     "webpack": "^4.35.3",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.5",
@@ -34,6 +40,7 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/react-transition-group": "^4.2.0",
     "@types/styled-components": "^4.1.18",
+    "core-js": "3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.8.6",
