--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
     "html-webpack-plugin": "^3.2.0",
     "moment-locales-webpack-plugin": "^1.0.7",
     "terser-webpack-plugin": "^1.3.0",
