--- a/package.json
+++ b/package.json
@@ -22,9 +22,16 @@
     "babel-plugin-styled-components": "^1.10.6",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^3.1.0",
     "dotenv": "^8.0.0",
+    "fibers": "^4.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "moment-locales-webpack-plugin": "^1.0.7",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "sass": "^1.22.9",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.3",
     "webpack": "^4.35.3",
