--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-transform-react-constant-elements": "^7.5.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
@@ -29,6 +30,8 @@
     "mini-css-extract-plugin": "^0.8.0",
     "moment-locales-webpack-plugin": "^1.0.7",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-normalize": "^8.0.1",
     "sass": "^1.22.9",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
