--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^3.1.0",
     "dotenv": "^8.0.0",
     "fibers": "^4.0.1",
+    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "moment-locales-webpack-plugin": "^1.0.7",
@@ -37,6 +38,7 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.3",
+    "url-loader": "^2.1.0",
     "webpack": "^4.35.3",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.5",
