--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.1.0",
+    "css-modules-typescript-loader": "^2.0.4",
     "dotenv": "^8.0.0",
     "fibers": "^4.0.1",
     "file-loader": "^4.1.0",
