--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.136",
     "@types/moment": "^2.13.0",
