--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.0.0",
     "fibers": "^4.0.1",
     "file-loader": "^4.1.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "moment-locales-webpack-plugin": "^1.0.7",
