--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
   "scripts": {
     "analyze": "cross-env NODE_ENV=production webpack --analyze",
     "build": "cross-env NODE_ENV=production webpack",
-    "start": "cross-env NODE_ENV=development webpack-dev-server"
+    "start": "cross-env NODE_ENV=development webpack-dev-server",
+    "postbuild": "react-snap",
+    "server": "cd ./build && http-server -gos"
+  },
+  "reactSnap": {
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -32,11 +40,13 @@
     "file-loader": "^4.1.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "mini-css-extract-plugin": "^0.8.0",
     "moment-locales-webpack-plugin": "^1.0.7",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-normalize": "^8.0.1",
+    "react-snap": "^1.23.0",
     "sass": "^1.22.9",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
